--- a/src/app/formulaireacceuil/formulaireacceuil.component.html
+++ b/src/app/formulaireacceuil/formulaireacceuil.component.html
@@ -1,1 +1,93 @@
-<p>formulaireacceuil works!</p>
+<div class="d-flex flex-row-reverse mx-5 my-1">
+<a class="btn btn-success" routerLink="/tableau">Retour au tableau</a>
+</div>
+<div class="text-center">
+
+
+  <div class="container-fluid contain vh-100 d-flex justify-content-center">
+    <main class="form-signin">
+
+
+
+
+        <img class="mb-4" src="../assets/img/postit.png" alt="" width="120" height="120">
+        <h1 class="h3 mb-3 fw-normal">To-do List</h1>
+
+
+      <form (ngSubmit)="onSubmit()" #formTodo="ngForm">
+
+        <div class="input-group">
+          <div class="form-floating">
+            <input  [(ngModel)]="todo.what"
+                    [name]="'nickname'"
+                    #inputTodoWhat="ngModel"
+                    id="inputTodoWhat"
+                    [class.is-invalid]="inputTodoWhat.touched && inputTodoWhat.invalid"
+                    type="text"
+                    class="form-control"
+                    required
+            >
+            <label for="inputTodoWhat">Something to do</label>
+          </div>
+            <div *ngIf="inputTodoWhat.invalid && (inputTodoWhat.dirty || inputTodoWhat.touched)"
+                 class="p-2 ms-2 col-5 alert-danger"
+            >
+              <div *ngIf="inputTodoWhat.errors?.required">
+                Je suis sur que vous avez quelques choses à faire ...
+              </div>
+            </div>
+        </div>
+
+
+
+
+        <div class="form-floating">
+          <input type="when" class="form-control" id="floatingPassword">
+          <label for="floatingPassword">Date</label>
+        </div>
+
+
+
+
+        <div class="input-group">
+          <div class="form-floating">
+            <input  [(ngModel)]="todo.when"
+                    [name]="'quand'"
+                    #inputTodoWhen="ngModel"
+                    id="inputTodoWhen"
+                    [class.is-invalid]="inputTodoWhen.touched && inputTodoWhen.invalid"
+                    type="text"
+                    class="form-control"
+                    required
+            >
+            <label for="inputTodoWhen">Something to do</label>
+          </div>
+          <div *ngIf="inputTodoWhen.invalid && (inputTodoWhen.dirty || inputTodoWhen.touched)"
+               class="p-2 ms-2 col-5 alert-danger"
+          >
+            <div *ngIf="inputTodoWhen.errors?.required">
+              Jusqu'à quand avez vous?
+            </div>
+          </div>
+        </div>
+
+        <div class="checkbox mb-3">
+          <label>
+            <input type="checkbox" value="finished"> Done ?
+          </label>
+        </div>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Add TODO</button>
+      </form>
+    </main>
+  </div>
+
+
+  <div class="container-fluid bg-black bg-opacity-10">
+    <div class="w-100 h-50"></div>
+
+
+  </div>
+</div>
+
+
+
