--- a/src/app/tableau/tableau.component.html
+++ b/src/app/tableau/tableau.component.html
@@ -22,6 +22,7 @@
                                                    #inputTodoWhat="ngModel"
                                                    id="inputTodoWhat"
                                                    [class.is-invalid]="inputTodoWhat.touched && inputTodoWhat.invalid"
+                                                   (input)="persist('test',$event.target.value)"
                                                    type="text"
                                                    placeholder="{{todo.what}}"
                                                    class="form-control"
