--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,22 @@
-<div class="container-fluid">
-  <div class="d-flex justify-content-center mt-4">
-    <router-outlet></router-outlet>
-  </div>
+<div class="container">
+    <div class="row">
+
+      <div class="col-2 offset-5">
+        <img class="mb-4" src="../assets/img/postit.png" alt="" width="120" height="120">
+        <h1 class="h3 mb-3 fw-normal">To-do List</h1>
+      </div>
+
+    </div>
+    <div class="row">
+
+      <div class="col-6">
+        <app-formulaireacceuil></app-formulaireacceuil>
+      </div>
+
+      <div class="col-6">
+        <app-tableau></app-tableau>
+      </div>
+
+    </div>
 </div>
 
